<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Firebase Social Media</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="loading">Loading…</string>
    <string name="registering_user">Registering User…</string>
    <string name="welcome_to_social_media_app">Welcome to</string>
    <string name="already_have_account_login">Already have account? Login</string>
    <string name="not_have_account_register">Not have account? Register</string>
    <string name="logging_user">Logging In…</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="forget_password">Forget Password?</string>
    <string name="or">OR</string>
    <string name="google_sign_in">Continue with Google</string>
    <string name="close_sheet">Close sheet</string>
    <string name="recover_password">Recover Your Password</string>
    <string name="cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="recover">RECOVER</string>
    <string name="failed">Authentication failed..</string>
    <string name="login_failed">Login failed.</string>
    <string name="check_your_mail">Email sent \nPlease check your mail</string>
    <string name="password_length_must_6_characters">Password length at least 6 characters</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="sending_email">Sending Email..</string>
    <string name="type_your_email_first">Type your email first</string>
    <string name="create_account">Create Account</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="users">Users</string>
    <string name="cover_photo">Cover photo</string>
    <string name="avatar_photo">Avatar photo</string>
    <string name="cover_image_url">https://m7madmagdy.github.io/profile/images/firebase.png</string>
    <string name="welcome_to_firebase">Welcome to Firebase</string>
    <string name="save">Save</string>
    <string name="photo_saved_successfully">Photo saved on this device</string>
    <string name="add_photo">Add photo</string>
    <string name="adding_photo">Adding Photo…</string>
    <string name="please_enable_permissions">Please enable permissions</string>
    <string name="choose">Choose</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="phone">Phone Number</string>
    <string name="name">Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="pick_image_from">Pick image from</string>
    <string name="navigate_up">Navigate Up</string>
    <string name="back">Back</string>
    <string name="update">Update</string>
    <string name="admin_email">mohamedmagdysaber@gmail.com</string>
    <string name="log_out">Log out</string>
    <string name="search">Search</string>
    <string name="user_search">Search…</string>
    <string name="photo_saved_on_device">Photo saved on this device</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chats">Chats</string>
    <string name="online">online</string>
    <string name="start_typing">Start typing…</string>
    <string name="send_message">Send message</string>
    <string name="enable_notification">الـسـماح للإشـعـارات</string>
    <string name="enable">ENABLE</string>
    <string name="seen">Seen</string>
    <string name="delivered">Delivered</string>

</resources>