<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/second_bg"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_gravity="center"
        android:gravity="center">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_animation"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/sign_in" />

        <TextView
            android:id="@+id/login_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lottie_animation"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_tv"
            android:hint="@string/email"
            app:startIconDrawable="@drawable/ic_mail"
            app:boxStrokeColor="@color/blue_firebase_btn"
            app:boxStrokeErrorColor="@android:color/holo_red_light"
            app:hintEnabled="true"
            app:hintTextColor="@color/blue_firebase_btn">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_password"
            android:layout_below="@id/email_layout"
            android:layout_marginTop="5dp"
            android:hint="@string/password"
            app:boxStrokeColor="@color/blue_firebase_btn"
            app:boxStrokeErrorColor="@android:color/holo_red_light"
            app:hintEnabled="true"
            app:hintTextColor="@color/blue_firebase_btn"
            app:passwordToggleContentDescription="@string/password"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/color_primary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_layout"
            android:gravity="center"
            android:paddingLeft="2dp"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:text="@string/forget_password"
            android:background="?attr/selectableItemBackground"
            android:textAlignment="center"
            android:textColor="@color/blue_firebase_btn"
            android:textStyle="bold" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/forget_password"
            android:layout_centerHorizontal="true"
            android:drawableLeft="@drawable/ic_login"
            android:padding="8dp"
            android:text="@string/login"
            android:textAllCaps="false" />

        <include
            android:id="@+id/or_view"
            layout="@layout/or_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_btn"
            android:layout_marginTop="15dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/google_sign_in_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/or_view"
            android:layout_marginStart="2dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="2dp"
            android:background="@drawable/btn_selector"
            android:drawableLeft="@mipmap/google"
            android:paddingLeft="6dp"
            android:text="@string/google_sign_in"
            android:textAllCaps="false"
            android:textColor="@color/blue_firebase_btn" />

        <TextView
            android:id="@+id/not_hav_account_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/google_sign_in_btn"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/not_have_account_register"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </RelativeLayout>

</ScrollView>