<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/sheet_handling"
                android:layout_width="50dp"
                android:layout_height="4dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                app:cardBackgroundColor="@color/black"
                app:cardCornerRadius="12dp" />

            <RelativeLayout
                android:id="@+id/head_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/sheet_handling"
                android:padding="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:padding="8dp"
                    android:text="@string/recover_password"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="RelativeOverlap" />

                <ImageButton
                    android:id="@+id/close_sheet_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:padding="10dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/close_sheet"
                    android:minHeight="48dp"
                    android:src="@drawable/ic_close"
                    app:tint="@color/black" />

            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/head_view"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="10dp"
                android:hint="@string/email"
                app:boxStrokeColor="@color/blue_firebase_btn"
                app:boxStrokeErrorColor="@android:color/holo_red_light"
                app:hintEnabled="true"
                app:hintTextColor="@color/blue_firebase_btn">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="flagNoFullscreen"
                    android:inputType="textEmailAddress" />

                <requestFocus/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/cancel_btn"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/email_layout"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:layout_toStartOf="@+id/recover_btn"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/recover_btn"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/email_layout"
                android:textStyle="bold"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10dp"
                android:text="@string/recover" />
        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>