<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/white"
        android:gravity="center">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_animation"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_alignParentTop="true"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/register" />

        <TextView
            android:id="@+id/register_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lottie_animation"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_tv"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/email"
            app:boxStrokeColor="@color/blue_firebase_btn"
            app:boxStrokeErrorColor="@android:color/holo_red_light"
            app:hintEnabled="true"
            app:hintTextColor="@color/blue_firebase_btn">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_layout"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:hint="@string/password"
            app:boxStrokeColor="@color/blue_firebase_btn"
            app:boxStrokeErrorColor="@android:color/holo_red_light"
            app:hintEnabled="true"
            app:hintTextColor="@color/blue_firebase_btn"
            app:passwordToggleContentDescription="@string/password"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/blue_firebase_btn">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/register_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/register"
            android:textAllCaps="false" />
    </RelativeLayout>

</ScrollView>